# rp23-template

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: error.rs  macros.rs  main.rs  rt.rs
