[package]
name = "rp23-template"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
static_cell = "2.1"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm"]

[dependencies.embassy-executor]
version = "0.7"
features = ["arch-cortex-m", "defmt", "executor-thread", "nightly"]

[dependencies.embassy-rp]
version = "0.3"
features = [
  "rp235xb",
  "critical-section-impl",
  "defmt",
  "time-driver",
  "unstable-pac",
]

[dependencies.embassy-time]
version = "0.4"
features = ["defmt-timestamp-uptime-us"]

[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

[package.metadata.cargo-machete]
ignored = ["cortex-m", "cortex-m-rt", "embassy-time"]
